# orbita

./: .gitignore  CMakeLists.txt  README.md  version.h.cmake
debian/: changelog  control  copyright  rules
res/test/: CometEls.txt
src/: asteroid.cpp  asteroid.h  clickablelabel.h  comet.cpp  comettabledialog.cpp  comettabledialog.h  common.h  downloaddialog.cpp  downloadmanager.h  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  mpcparser.cpp  mpcparser.h  mpctosql.h  orbit.cpp  orbit.h  orbita.qrc  planet.cpp  planet.h  progressdialog.cpp  solarsystem.h  sqlite.cpp  sqlite.h  statusbarwidget.h  tabledialog.cpp  types.h
src/custwidget/: clickablelabel.cpp  statusbarwidget.cpp
src/db/: sqlite.cpp
src/dialog/: downloaddialog.h  progressdialog.h
src/mpc/: mpcparser.cpp  mpcparser.h  mpctosql.cpp
src/net/: downloadmanager.cpp
src/render/: renderwindow.cpp  renderwindow.h
src/solarsystem/: asteroid.cpp  celestialbody.cpp  celestialbody.h  comet.cpp  comet.h  orbit.h  solarsystem.cpp
src/table/: asteroidtabledialog.cpp  asteroidtabledialog.h  mpctabledialog.cpp  mpctabledialog.h  mpctableview.cpp  mpctableview.h  tabledialog.cpp  tabledialog.h
src/test/: main.cpp  testdecompressgzip.h  testmpcparser.h  testsqlite.h
src/util/: common.h  decompress.cpp  decompress.h  logger.cpp  settings.cpp  settings.h
